name:                ghcjs-mithril
version:             0.1.0.0
synopsis:            mithril.js bindings for ghcjs
license:             MIT
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2015
category:            Web
build-type:          Simple
cabal-version:       >=1.10
description:         mithril.js bindings for ghcjs

executable example
  main-is:             Main.hs
  hs-source-dirs:      example
  ghcjs-options:       -O2
  build-depends:       base >=4.7 && <4.8
                     , ghcjs-base
                     , ghcjs-dom
                     , ghcjs-mithril
  default-language:    Haskell2010
  
library
  exposed-modules:     Mithril
  js-sources:          mithril/mithril.js
  hs-source-dirs:      src
  ghcjs-options:       -O2
  build-depends:       base >=4.7 && <4.8
                     , ghcjs-base
                     , ghcjs-dom
  default-language:    Haskell2010
